website: Fix up alignment for nav and header links.
Keeps horrible things from happening.

--- a/website/media/styles.scss
+++ b/website/media/styles.scss
@@ -55,10 +55,12 @@ p {
 
 #header-left {
     text-align: left;
+    display: inline-block;
 }
 
 #header-right {
     text-align: right;
+    display: inline-block;
     #navigation {
         li {
             display: inline;
